# antiflash.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
antiflash/: __init__.py  __main__.py
tests/: tests.py
