[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "antiflash"
readme = "ReadMe.md"
description = "A monkey-patch for `black` uncompromising Python source code reformatter, coercing it to use tabs for indentation instead of cargo cult spaces."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["black", "white"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/antiflash.py"

[project.scripts]
antiflash = "antiflash.__main__:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["antiflash", "antiflash.*"]

[tool.setuptools_scm]

[tool.black]
line-length = 100500

[tool.isort]
profile = "black"
